force-app/main/default/objects/Tracking_de_Pickup__c/fields/Estado_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Estado_Pickup__c</fullName>
    <label>Estado Pickup</label>
    <length>20</length>
    <type>Text</type>
</CustomField>