force-app/main/default/objects/Tracking_de_Pickup__c/fields/Fecha_Estado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Estado__c</fullName>
    <label>Fecha Estado</label>
    <type>Date</type>
</CustomField>