force-app/main/default/objects/Tracking_de_Pickup__c/fields/Solicitud_de_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_Pickup__c</fullName>
    <label>Solicitud de Pickup</label>
    <referenceTo>Solicitud_de_Pickup__c</referenceTo>
    <relationshipLabel>Trackings de Pickup</relationshipLabel>
    <relationshipName>Trackings_de_Pickup</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>