force-app/main/default/objects/Tracking_de_Pickup__c/fields/Unidad__c.field-meta.xml
<CustomField>
    <fullName>Unidad__c</fullName>
    <label>Unidad</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>