force-app/main/default/objects/Tracking_de_Pickup__c/fields/Valor_USD__c.field-meta.xml
<CustomField>
    <fullName>Valor_USD__c</fullName>
    <label>Valor USD</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>